<resources>
    <string name="app_name">e-commerce</string>
    <string name="connection_error">Connection error\n</string>
    <string name="error">An error occured</string>
    <string name="invalid_credentials">Invalid credentials\n</string>
    <string name="dont_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_button">Sign In</string>
    <string name="fragment_sign_in_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="fragment_sign_in_title">Welcome back</string>
    <string name="app_description">Grocery app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragment_onboarding_next">Next</string>
    <string name="welcome_to_lokmart_n_grocery_applications">Welcome to LokMart!\n Grocery Applications</string>
    <string name="onboarding_title_0">Welcome to LokMart! \n Grocery Applications</string>
    <string name="onboarding_title_1">Best Quality and \n Fast Delivery</string>
    <string name="onboarding_description_0">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="onboarding_description_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</string>
    <string name="fragment_onboarding_get_started">Get Started</string>
    <string name="sign_up_register">Register</string>
    <string name="fragment_sign_up_terms_and_conditions">By tapping “Register” you accept our terms and condition</string>
    <string name="sign_up_have_account">Already have account?</string>
    <string name="fragment_sign_up_sign_in">Login</string>
    <string name="price">$%.1f</string>
    <string name="price_2">$%.2f</string>
    <string name="price_plus">+ $%.1f</string>
    <string name="price_minus">- $%.1f</string>
    <string name="already_registered">This mail already is regestered\n</string>
    <string name="fragment_home_greeting">Hello, %s</string>
    <string name="fragment_home_good_morning">Good morning</string>
    <string name="fragment_home_search">Search...</string>
    <string name="fragment_home_categories">Categories</string>
    <string name="show_all">Show all</string>
    <string name="item_category_count">%d items</string>
    <string name="fragment_item_product_discount">%d%% OFF</string>
    <string name="item_product_ratings_count">%d ratings</string>
    <string name="price_striked">$%.1f</string>
    <string name="error_loading">an error occured...</string>
    <string name="retry">Retry\n</string>
    <string name="fragment_categories_title">Categories</string>
    <string name="item_category_counts">%d items</string>
    <string name="fragment_search_title">Search</string>
    <string name="fragment_search_recent">Recent search</string>
    <string name="clear_all">Clear All</string>
    <string name="fragment_search_result">Search Result</string>
    <string name="fragment_filter_title">Filter Options</string>
    <string name="fragment_filter_recet">Recet</string>
    <string name="fragment_range_title">SORT BY PRICE RANGE</string>
    <string name="fragment_filter_rating_title">SORT BY RATING</string>
    <string name="fragment_filter_one_two_starts">1 -2 Stars</string>
    <string name="fragment_filter_two_three_starts">2 - 3 Stars</string>
    <string name="fragment_filter_three_four_starts">3 - 4 Stars</string>
    <string name="fragment_filter_four_five_starts">4 - 5 Stars</string>
    <string name="fragment_filter_10_20_starts">20 - 30 %%</string>
    <string name="fragment_filter_25_50_starts">25 - 50 %%</string>
    <string name="fragment_filter_50_70_starts">50 - 70 %%</string>
    <string name="fragment_filter_70_plus_starts">70%%above</string>
    <string name="fragment_filter_others_title">Sort by others</string>
    <string name="fragment_filter_discount">Discount</string>
    <string name="fragment_filter_free_shipping">Free Shipping</string>
    <string name="fragment_filter_voucher">Voucher</string>
    <string name="fragment_filter_sameDay_delivery">Same day delivery</string>
    <string name="fragment_filter_categories_error">Error filter categories</string>
    <string name="fragment_filter_button">Apply</string>
    <string name="fragment_product_reviews">%.1f (%d reviews)</string>
    <string name="fragment_product_free_delivery">Free delivery</string>
    <string name="fragment_related_product">Related product</string>
    <string name="fragment_product_add">ADD TO CART</string>
    <string name="fragment_detail_share_title">Share</string>
    <string name="navigation_title_home">Home</string>
    <string name="navigation_title_order">Orders</string>
    <string name="navigation_title_card">Card</string>
    <string name="navigation_title_wishlist">Wishlist</string>
    <string name="navigation_title_profile">Profile</string>
    <string name="fragment_my_orders">My Orders</string>
    <string name="item_order_id">Order ID #%d</string>
    <string name="item_order_count">%d items</string>
    <string name="fragment_cart_title">Shopping Cart</string>
    <string name="fruits">Fruist</string>
    <string name="fragment_cart_billing_title">Billing details</string>
    <string name="fragment_cart_item_total">Item Total</string>
    <string name="dash">-</string>
    <string name="fragment_cart_delivery_fee">Delivery Fee</string>
    <string name="fragment_cart_tax">Taxes and Charge</string>
    <string name="fragment_cart_ordal_total">Order Total</string>
    <string name="fragment_cart_promo_code">Promo Code</string>
    <string name="fragment_cart_checkout">Check Out</string>
    <string name="fragment_cart_apply">Apply</string>
    <string name="fragment_detail_cart_added">item added to Cart</string>
    <string name="fragment_cart_empty">Cart is empty</string>
    <string name="fragment_cart_discount">Promode Discount</string>
    <string name="fragment_cart_billing_error">Error getting billing details</string>
    <string name="fragment_cart_billing_order">Error creating order</string>
    <string name="fragment_cart_order_created">Order successfully created</string>
</resources>