<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:background="@drawable/background_sing_in" />

    <ProgressBar
        android:id="@+id/progress"
        android:indeterminate="true"
        android:visibility="gone"
        android:elevation="4dp"
        app:layout_constraintBottom_toBottomOf="@id/sing_in_btn"
        app:layout_constraintStart_toStartOf="@id/sing_in_btn"
        app:layout_constraintTop_toTopOf="@id/sing_in_btn"
        app:layout_constraintEnd_toEndOf="@id/sing_in_btn"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:id="@+id/sing_in_btn"
        android:layout_height="76dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_backgraund"
        android:fontFamily="@font/extra_bold"
        android:text="@string/sign_in_button"
        android:textSize="16sp"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@id/forgot"
        app:layout_goneMarginBottom="19dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgot"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="42dp"
        android:fontFamily="@font/semi_bold"
        android:text="@string/forgot_password"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/poppins"
        android:text="@string/dont_account"
        android:textColor="@color/soft_gray"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sing_up"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/sing_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semi_bold"
        android:paddingHorizontal="8dp"
        android:paddingVertical="8dp"
        android:text="@string/sign_up"
        android:textColor="@color/orange"
        android:textSize="16dp"
        app:layout_constraintBaseline_toBaselineOf="@id/sign_up_text"
        app:layout_constraintBottom_toBottomOf="@id/sign_up_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sign_up_text" />


</androidx.constraintlayout.widget.ConstraintLayout>