<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="272dp"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/imageLayout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:cardCornerRadius="14dp"
        app:layout_constraintDimensionRatio="272:218"
        app:layout_constraintTop_toTopOf="parent"
        app:cardElevation="0dp"
        app:strokeColor="@color/gray_1"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@color/orange" />
    </com.google.android.material.card.MaterialCardView>

    <ImageView
        android:id="@+id/like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/imageLayout"
        app:layout_constraintTop_toTopOf="@id/imageLayout"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="17dp"
        android:src="@drawable/ic_heart_unchecked"/>

    <TextView
        android:id="@+id/discount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_item_product_discount"
        android:textColor="@color/white"
        android:fontFamily="@font/medium"
        android:textSize="12sp"
        android:paddingVertical="6dp"
        android:paddingHorizontal="7dp"
        app:layout_constraintTop_toTopOf="@id/imageLayout"
        app:layout_constraintStart_toStartOf="@id/imageLayout"
        android:layout_marginTop="17dp"
        android:layout_marginStart="21dp"
        android:background="@drawable/discount_background"/>
    <TextView
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:fontFamily="@font/semi_bold"
        android:text="Banana"
        android:textColor="@color/dark"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/imageLayout" />

    <TextView
        android:id="@+id/rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rating_background"
        android:drawablePadding="4dp"
        android:fontFamily="@font/semi_bold"
        android:paddingStart="7dp"
        android:paddingTop="5dp"
        android:paddingEnd="11dp"
        android:paddingBottom="3dp"
        android:text="4.5"
        android:textColor="@color/dark"
        android:textSize="10sp"
        app:drawableStartCompat="@drawable/ic_star"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name" />

    <TextView
        android:id="@+id/ratingCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:fontFamily="@font/medium"
        android:text="@string/item_product_ratings_count"
        android:textColor="@color/orange"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@id/rating"
        app:layout_constraintStart_toEndOf="@id/rating" />


    <TextView
        android:id="@+id/old"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/regular"
        android:text="@string/price_striked"
        android:textColor="@color/soft_gray"
        android:layout_marginEnd="8dp"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/rating"
        app:layout_constraintEnd_toStartOf="@id/price" />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semi_bold"
        android:text="@string/price"
        android:textColor="@color/dark"
        android:textSize="16sp"
        app:layout_constraintBaseline_toBaselineOf="@id/rating"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>